<resources>
    <string name="app_name">Shopping List</string>
    <string name="minus"><![CDATA[<]]></string>
    <string name="plus"><![CDATA[>]]></string>
    <string name="itemQuantityDefault">0</string>
    <string name="CancelButton">Cancel</string>
    <string name="SaveButton">Save</string>
    <string name="qtyText">QTY</string>
    <string name="hint">Enter your item name</string>
    <string name="listNameHint">Enter the name of your shopping list\n</string>
</resources>