<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/listNameInput"
        android:layout_width="396dp"
        android:layout_height="55dp"
        android:hint="@string/listNameHint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/listNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Shopping list"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listNameInput"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/extraButtonColor"
        android:text="@string/CancelButton"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingLayout"
        app:layout_constraintVertical_bias="0.537" />

    <TableLayout
        android:id="@+id/shoppingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listNameTextView"
        app:layout_constraintVertical_bias="0.337">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/my_15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemNameInputOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint" />

            <Button
                android:id="@+id/minusItemOne"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="@dimen/itemTextSize"
                app:cornerRadius="@dimen/buttonCornerRadius" />

            <TextView
                android:id="@+id/quantityItemOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mx_15"
                android:text="@string/itemQuantityDefault"
                android:textColor="@color/black"
                android:textSize="@dimen/quantityTextSize" />

            <Button
                android:id="@+id/plusItemOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="@dimen/itemTextSize"
                app:cornerRadius="@dimen/buttonCornerRadius" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/my_15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemNameInputTwo"
                android:layout_width="158dp"
                android:layout_height="61dp"
                android:layout_marginTop="4dp"
                android:hint="@string/hint" />

            <Button
                android:id="@+id/minusItemTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="@dimen/itemTextSize"
                app:cornerRadius="@dimen/buttonCornerRadius" />

            <TextView
                android:id="@+id/quantityItemTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mx_15"
                android:text="@string/itemQuantityDefault"
                android:textColor="@color/black"
                android:textSize="@dimen/quantityTextSize" />

            <Button
                android:id="@+id/plusItemTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="@dimen/itemTextSize"
                app:cornerRadius="@dimen/buttonCornerRadius" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/my_15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemNameInputThree"
                android:layout_width="158dp"
                android:layout_height="61dp"
                android:layout_marginTop="4dp"
                android:hint="@string/hint" />

            <Button
                android:id="@+id/minusItemThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="@dimen/itemTextSize"
                app:cornerRadius="@dimen/buttonCornerRadius" />

            <TextView
                android:id="@+id/quantityItemThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mx_15"
                android:text="@string/itemQuantityDefault"
                android:textColor="@color/black"
                android:textSize="@dimen/quantityTextSize" />

            <Button
                android:id="@+id/plusItemThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="@dimen/itemTextSize"
                app:cornerRadius="@dimen/buttonCornerRadius" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/my_15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemNameInputFour"
                android:layout_width="158dp"
                android:layout_height="61dp"
                android:layout_marginTop="4dp"
                android:hint="@string/hint" />

            <Button
                android:id="@+id/minusItemFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="@dimen/itemTextSize"
                app:cornerRadius="@dimen/buttonCornerRadius" />

            <TextView
                android:id="@+id/quantityItemFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mx_15"
                android:text="@string/itemQuantityDefault"
                android:textColor="@color/black"
                android:textSize="@dimen/quantityTextSize" />

            <Button
                android:id="@+id/plusItemFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="@dimen/itemTextSize"
                app:cornerRadius="@dimen/buttonCornerRadius" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/my_15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemNameInputFive"
                android:layout_width="158dp"
                android:layout_height="61dp"
                android:layout_marginTop="4dp"
                android:hint="@string/hint" />

            <Button
                android:id="@+id/minusItemFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="@dimen/itemTextSize"
                app:cornerRadius="@dimen/buttonCornerRadius" />

            <TextView
                android:id="@+id/quantityItemFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/mx_15"
                android:text="@string/itemQuantityDefault"
                android:textColor="@color/black"
                android:textSize="@dimen/quantityTextSize" />

            <Button
                android:id="@+id/plusItemFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="@dimen/itemTextSize"
                app:cornerRadius="@dimen/buttonCornerRadius" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/extraButtonColor"
        android:text="@string/SaveButton"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingLayout"
        app:layout_constraintVertical_bias="0.537" />

</androidx.constraintlayout.widget.ConstraintLayout>